<resources>
    <string name="app_name">ContactApp</string>
    <string name="temporary_string">Temporary</string>
    <string name="add_contact">Add</string>
    <string name="cancel">Cancel</string>
    <string name="searchHint">Tìm kiếm theo họ và tên...</string>
    <string name="main_title">Contact App</string>
    <string name="home_title">Trang chủ</string>
    <string name="account_item">Thông tin tài khoản</string>
    <string name="assistance_item">Hỗ trợ và phản hồi</string>
    <string name="version_item">Thông tin phiên bản</string>
    <string name="item_other">Others</string>
    <string name="edit_contact_title">Chỉnh sửa liên hệ</string>
    <string name="name_title">Họ tên</string>
    <string name="phone_title">Số điện thoại</string>
    <string name="address_title">Địa chỉ</string>
    <string name="email_title">Email</string>
    <string name="edit_favourite_contact_title">Liên hệ yêu thích?</string>
    <string name="edit_yes_favourite">Có</string>
    <string name="edit_no_favourite">Không</string>
    <string name="delete_contact_title">Xóa liên hệ</string>
    <string name="open_menu_description">open navigation detail</string>

</resources>