<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailContactActivity"
    android:background="@android:color/white">

    <ImageView
        android:scaleType="centerCrop"
        android:id="@+id/iv_background"
        android:layout_width="412dp"
        android:layout_height="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/default_contact_background"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_container"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_background"
        app:layout_constraintStart_toStartOf="@+id/iv_background">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_baseline_person_24" />

    </androidx.cardview.widget.CardView>

    <com.example.contactapp.customizeview.RobotoTextView
        android:id="@+id/tv_bottom_support_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="23dp"
        android:gravity="center_vertical"
        android:text="@string/temporary_string"
        app:typeface="roboto_medium"
        android:textColor="@color/red"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/cv_container"
        app:layout_constraintStart_toEndOf="@+id/cv_container" />

    <com.example.contactapp.customizeview.RobotoTextView
        android:id="@+id/tv_left_support_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="24dp"
        android:gravity="center_vertical"
        android:text="@string/temporary_string"
        app:typeface="roboto_medium"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/cv_container"
        app:layout_constraintStart_toEndOf="@+id/cv_container" />

    <com.example.contactapp.customizeview.RobotoTextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="24dp"
        android:gravity="center_vertical"
        android:text="@string/temporary_string"
        app:typeface="roboto_medium"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/cv_container"
        app:layout_constraintStart_toEndOf="@+id/cv_container" />

    <ImageView
        android:id="@+id/iv_edit"
        android:layout_width="47dp"
        android:layout_height="43dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_edit_24"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/iv_yes_favourite"
        android:layout_width="45dp"
        android:layout_height="43dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_edit"
        app:layout_constraintEnd_toStartOf="@+id/iv_edit"
        app:srcCompat="@drawable/ic_baseline_favorite_24"
        tools:ignore="VectorDrawableCompat"
        app:tint="#FF0051" />

    <ImageView
        android:id="@+id/iv_no_favourite"
        android:layout_width="45dp"
        android:layout_height="43dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_edit"
        app:layout_constraintEnd_toStartOf="@+id/iv_edit"
        app:srcCompat="@drawable/ic_baseline_favorite_24"
        tools:ignore="VectorDrawableCompat"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/iv_back_to_main"
        android:layout_width="45dp"
        android:layout_height="43dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        android:alpha="0.7"
        tools:ignore="VectorDrawableCompat"
        app:tint="@color/darkBlue" />

    <LinearLayout
        android:id="@+id/phone_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_background">

        <com.example.contactapp.customizeview.RobotoTextView
            app:typeface="roboto_light"
            android:textColor="@color/darkTurquoise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_title" />

        <com.example.contactapp.customizeview.RobotoTextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temporary_string"
            app:typeface="roboto_bold"
            android:textColor="#303387"
            android:textSize="23sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/address_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_view">

        <com.example.contactapp.customizeview.RobotoTextView
            app:typeface="roboto_light"
            android:textColor="@color/darkTurquoise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_title" />

        <com.example.contactapp.customizeview.RobotoTextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:text="@string/temporary_string"
            app:typeface="roboto_bold"
            android:textColor="#303387"
            android:textSize="23sp"
            tools:ignore="TextViewEdits" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_view">

        <com.example.contactapp.customizeview.RobotoTextView
            app:typeface="roboto_light"
            android:textColor="@color/darkTurquoise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_title" />

        <com.example.contactapp.customizeview.RobotoTextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:text="@string/temporary_string"
            app:typeface="roboto_bold"
            android:textColor="#303387"
            android:textSize="23sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/bt_text"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:background="@drawable/circle_button"
        android:tint="@color/white"
        android:backgroundTint="#456688"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/bt_call"
        app:layout_constraintEnd_toStartOf="@+id/bt_call"
        app:srcCompat="@drawable/ic_baseline_comment_24" />

    <ImageButton
        android:id="@+id/bt_email"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:background="@drawable/circle_button"
        android:tint="@color/white"
        android:backgroundTint="#2F4A65"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/bt_call"
        app:layout_constraintStart_toEndOf="@+id/bt_call"
        app:srcCompat="@drawable/ic_baseline_email_24" />

    <ImageButton
        android:id="@+id/bt_call"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/circle_button"
        android:tint="@color/white"
        android:backgroundTint="@color/midnightBlue"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_call_24"/>

</androidx.constraintlayout.widget.ConstraintLayout>